--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <!-- header section -->
@@ -18,10 +18,10 @@
             <!-- navigation -->
             <nav class="navigation">
                 <!-- logo -->
-                <a class="header__logo link" href="">Web<span class="header__logo-part">Studio</span></a>
+                <a class="logo link" href="">Web<span class="logo__part-black">Studio</span></a>
                 <ul class="navigation__list list">
                     <li class="navigation__item"><a class="navigation__link link" href="./index.html">Студия</a></li>
-                    <li class="navigation__item"><a class="navigation__link link current-page" href="./portfolio.html">Портфолио</a></li>
+                    <li class="navigation__item"><a class="navigation__link navigation__link--current link" href="./portfolio.html">Портфолио</a></li>
                     <li class="navigation__item"><a class="navigation__link link" href="">Контакты</a></li>
                 </ul>
             </nav>
@@ -193,11 +193,11 @@
         <div class="container footer__container">
             <!-- logo 2 -->
             <div class="footer__links">
-                <a class="footer__logo link" href="">Web<span class="footer__logo-part">Studio</span></a>
+                <a class="logo link" href="">Web<span class="logo__part-white">Studio</span></a>
                 <!-- address -->
                 <address class="footer__address">
                 <ul class="footer__address-list list">
-                    <li class="footer__address-item"><a class="footer__address-link-add link" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="footer__address-item"><a class="footer__address-link--add link" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer__address-item"><a class="footer__address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="footer__address-item"><a class="footer__address-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
