--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="footer__form">
                 <p class="footer__form-title">Подпишитесь на рассылку</p>
                 <div class="footer__form-block">
-                    <input type="email" name="email" id="mail" placeholder="E-mail" class="footer-input">
+                    <input type="email" name="email" id="mail" placeholder="E-mail" class="footer__input">
                     <button type="button" class="footer__form-button">Подписаться
                         <svg class="footer__icon-telegramm" width="24" height="24"> 
                             <use href="./images/icons.svg#icon-telegramm"></use>
