--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                 
                     <!-- filter -->
                     <ul class="portfolio__filter-list list">
-                        <li class="portfolio__filter-item"><button class="portfolio__filter-button" type="button">Все</button></li>
+                        <li class="portfolio__filter-item"><button class="portfolio__filter-button portfolio__filter-button--start" type="button">Все</button></li>
                         <li class="portfolio__filter-item"><button class="portfolio__filter-button" type="button">Веб-сайты</button></li>
                         <li class="portfolio__filter-item"><button class="portfolio__filter-button" type="button">Приложения</button></li>
                         <li class="portfolio__filter-item"><button class="portfolio__filter-button" type="button">Дизайн</button></li>
@@ -243,7 +243,7 @@
             <div class="footer__form">
                 <p class="footer__form-title">Подпишитесь на рассылку</p>
                 <div class="footer__form-block">
-                    <input type="email" name="email" id="mail" placeholder="E-mail" class="footer-input">
+                    <input type="email" name="email" id="mail" placeholder="E-mail" class="footer__input">
                     <button type="button" class="footer__form-button">Подписаться
                         <svg class="footer__icon-telegramm" width="24" height="24"> 
                             <use href="./images/icons.svg#icon-telegramm"></use>
