--- a/portfolio.html
+++ b/portfolio.html
@@ -193,7 +193,7 @@
         <div class="container footer__container">
             <!-- logo 2 -->
             <div class="footer__links">
-                <a class="logo link" href="">Web<span class="logo__part-white">Studio</span></a>
+                <a class="logo logo--footer link" href="">Web<span class="logo__part-white">Studio</span></a>
                 <!-- address -->
                 <address class="footer__address">
                 <ul class="footer__address-list list">
