--- a/index.html
+++ b/index.html
@@ -57,52 +57,54 @@
         <section class="second-main section" >
             <div class="container">
                 <h2 class="second-main__title">Особенности</h2>
-                    <ul class="second-main__icons-list list">
-                        <li class="second-main__icons-item">
-                            <svg class="second-main__icons" width="70" height="70" >
-                                <use href="./images/icons.svg#icon-antenna">
-                                </use>
-                            </svg>
-                        </li>
-                        <li class="second-main__icons-item">
-                            <svg class="second-main__icons" width="70" height="70" >
-                                <use href="./images/icons.svg#icon-clock">
-                                </use>
-                            </svg>
-
-                        </li>
-                        <li class="second-main__icons-item">
-                            <svg class="second-main__icons" width="70" height="70" >
-                                <use href="./images/icons.svg#icon-diagram">
-                                </use>
-                            </svg>
-
-                        </li>
-                        <li class="second-main__icons-item" >
-                            <svg class="second-main__icons" width="70" height="70" >
-                                <use href="./images/icons.svg#icon-astronaut">
-                                </use>
-                            </svg>
-
-                        </li>
-                    </ul>
-                    
                     <ul class="second-main__list list">
                         <li class="second-main__item">
-                            <h3 class="second-main__item-title">Внимание к деталям</h3>
-                            <p class="second-main__item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            <div class="second-main__box">
+                                <div class="second-main__icons-item">
+                                    <svg class="second-main__icons" width="70" height="70" >
+                                        <use href="./images/icons.svg#icon-antenna">
+                                        </use>
+                                    </svg>
+                                </div>
+                                <h3 class="second-main__item-title">Внимание к деталям</h3>
+                                <p class="second-main__item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            </div>
                         </li>
                         <li class="second-main__item">
-                            <h3 class="second-main__item-title">Пунктуальность</h3>
-                            <p class="second-main__item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            <div class="second-main__box">
+                                <div class="second-main__icons-item">
+                                    <svg class="second-main__icons" width="70" height="70" >
+                                        <use href="./images/icons.svg#icon-clock">
+                                        </use>
+                                    </svg>
+                                </div>
+                                <h3 class="second-main__item-title">Пунктуальность</h3>
+                                <p class="second-main__item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            </div>
                         </li>
                         <li class="second-main__item">
-                            <h3 class="second-main__item-title">Планирование</h3>
-                            <p class="second-main__item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                            <div class="second-main__box">
+                                <div class="second-main__icons-item">
+                                    <svg class="second-main__icons" width="70" height="70" >
+                                        <use href="./images/icons.svg#icon-diagram">
+                                        </use>
+                                </svg>
+                                </div>
+                                <h3 class="second-main__item-title">Планирование</h3>
+                                <p class="second-main__item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                            </div>
                         </li>
                         <li class="second-main__item">
-                            <h3 class="second-main__item-title">Современные технологии</h3>
-                            <p class="second-main__item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <div class="second-main__box">
+                                <div class="second-main__icons-item">
+                                    <svg class="second-main__icons" width="70" height="70" >
+                                        <use href="./images/icons.svg#icon-astronaut">
+                                        </use>
+                                    </svg>
+                                </div>
+                                <h3 class="second-main__item-title">Современные технологии</h3>
+                                <p class="second-main__item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            </div>
                         </li>
                     </ul>
             </div>
@@ -138,7 +140,8 @@
             <div class="container">
                 <h2 class="main-team__title">Наша команда</h2>
                 <ul class="main-team__list list">
-                    <li class="main-team__item"><img src="./images/team1.jpg" alt="участник команды 1" width="270" height="260">
+                    <li class="main-team__item">
+                        <img class="main-team__image" src="./images/team1.jpg" alt="участник команды 1" width="270" height="260">
                         <h3 class="main-team__item-title">Игорь Демьяненко</h3>
                         <p class="main-team__item-text" lang="en">Product Designer</p>
                         <ul class="main-team__social-list list">
@@ -176,7 +179,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-team__item"><img src="./images/team2.jpg" alt="участник команды 2" width="270" height="260">
+                    <li class="main-team__item">
+                        <img class="main-team__image" src="./images/team2.jpg" alt="участник команды 2" width="270" height="260">
                         <h3 class="main-team__item-title">Ольга Репина</h3>
                         <p class="main-team__item-text" lang="en">Frontend Developer</p>
                         <ul class="main-team__social-list list">
@@ -214,7 +218,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-team__item"><img src="./images/team3.jpg" alt="участник команды 3" width="270" height="260">
+                    <li class="main-team__item">
+                        <img class="main-team__image" src="./images/team3.jpg" alt="участник команды 3" width="270" height="260">
                         <h3 class="main-team__item-title">Николай Тарасов</h3>
                         <p class="main-team__item-text" lang="en">Marketing</p>
                         <ul class="main-team__social-list list">
@@ -252,7 +257,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="main-team__item"><img src="./images/team4.jpg" alt="участник команды 4" width="270" height="260">
+                    <li class="main-team__item">
+                        <img class="main-team__image" src="./images/team4.jpg" alt="участник команды 4" width="270" height="260">
                         <h3 class="main-team__item-title">Михаил Ермаков</h3>
                         <p class="main-team__item-text" lang="en">UI Designer</p>
                         <ul class="main-team__social-list list">
@@ -301,7 +307,6 @@
                         <a href="" class="clients__icons-link">
                            <svg class="clients__icons" >
                                <use href="./images/icons.svg#icon-client-1">
-
                                </use>
                            </svg> 
                         </a>
@@ -310,7 +315,6 @@
                         <a href="" class="clients__icons-link">
                             <svg class="clients__icons" >
                                 <use href="./images/icons.svg#icon-client-2">
- 
                                 </use>
                             </svg>
                         </a>
@@ -319,7 +323,6 @@
                         <a href="" class="clients__icons-link">
                             <svg class="clients__icons" >
                                 <use href="./images/icons.svg#icon-client-3">
- 
                                 </use>
                             </svg>
                         </a>
@@ -328,7 +331,6 @@
                         <a href="" class="clients__icons-link">
                             <svg class="clients__icons" >
                                 <use href="./images/icons.svg#icon-client-4">
- 
                                 </use>
                             </svg>
                         </a>
@@ -337,7 +339,6 @@
                         <a href="" class="clients__icons-link">
                             <svg class="clients__icons" >
                                 <use href="./images/icons.svg#icon-client-5">
- 
                                 </use>
                             </svg>
                         </a>
@@ -346,7 +347,6 @@
                         <a href="" class="clients__icons-link">
                             <svg class="clients__icons" >
                                 <use href="./images/icons.svg#icon-client-6">
- 
                                 </use>
                             </svg>
                         </a>
