--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>    
         </section>
         <!-- peculiarities section -->
-        <section class="second-main section" >
+        <section class="second-main" >
             <div class="container">
                 <h2 class="second-main__title">Особенности</h2>
                     <ul class="second-main__list list">
@@ -110,7 +110,7 @@
             </div>
         </section>
         <!-- what are we doing -->
-        <section class="third-main section">
+        <section class="third-main">
             <div class="container">
                 <h2 class="third-main__title">Чем мы занимаемся</h2>
                     <ul class="third-main__list list">
@@ -136,7 +136,7 @@
             </div>
         </section>
         <!-- our team section -->
-        <section class="main-team section">
+        <section class="main-team">
             <div class="container">
                 <h2 class="main-team__title">Наша команда</h2>
                 <ul class="main-team__list list">
@@ -299,7 +299,7 @@
                 </ul>
             </div>
         </section>
-       <section class="clients section">
+       <section class="clients">
             <div class="container">
                 <h2 class="clients__title">Постоянные клиенты</h2>
                 <ul class="clients__icons-list list">
@@ -374,7 +374,7 @@
                 </address>
             </div>  
             <div class="footer__social">
-                <h4 class="footer__social-text">Присоединяйтесь</h4>
+                <p class="footer__social-text">Присоединяйтесь</p>
                 <ul class="footer__social-list list">
                     <li class="footer__social-item"> 
                         <a href="" class="footer__social-link" > 
