--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@
                 </address>
             </div>  
             <div class="footer__social">
-                <h4 class="footer__social-text">Присоединяйтесь</h4>
+                <p class="footer__social-text">Присоединяйтесь</p>
                 <ul class="footer__social-list list">
                     <li class="footer__social-item"> 
                         <a href="" class="footer__social-link" > 
